--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
 
-<head>
-    <meta charset="UTF-8">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-
-<body>
+<div class="MyContainer">
     <div class="container" *ngIf="!msgFlag">
         <div class="title">verification for Personal Loan</div>
         <div class="content">
@@ -103,6 +96,5 @@
 
     </div>
 
-</body>
+</div>
 
-</html>
