--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -5,7 +5,7 @@
   box-sizing: border-box;
   font-family: 'Poppins',sans-serif;
 }
-body{
+.MyContainer{
   height: 100vh;
   display: flex;
   justify-content: center;
